# California-Socioeconomic-Profile

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pipeline.py  pyproject.toml  requirements.txt
.github/: CHANGELOG.md
.github/workflows/: gcp-deploy.yml  ingest-data.yml
assets/: style.css
assets/js/clientside_callbacks/: data.js  dropdowns.js  figures.js  off-canvas.js
assets/modal_images/: metadata.csv
config/: config.json  dropdown_config.json  metadata.yaml  place_metadata.csv  r-cpi-u-rs.csv
db_retrieval/: __init__.py  _db_read.py  db_connection.py
ingestion/: __init__.py  _functions.py  _tiger_confine.py  config.py  utils.py
ingestion/etl_process/: __init__.py  _tiger_init.py  custom_warnings.py  etl_init.py  exceptions.py  metadata.py  protocols.py
page_components/: __init__.py  _app_layout.py  _colors.py  _config_utils.py  _dropdowns.py  _modal.py  _off_canvas.py  _submeasures_options.py  _utils.py  config.py
page_figure_styling/: __generate_files.py  __init__.py  _abc.py  _tool_ContractRent.py  _tool_EconomicMeasures.py  _tool_Education.py  _tool_EmploymentStatistics.py  _tool_FoodStamps.py  _tool_HealthInsuranceCoverage.py  _tool_HouseholdIncome.py  _tool_HousingUnitsandOccupancy.py  _tool_Population.py  _tool_Poverty.py  _tool_RentBurden.py  _tool_TransportationMethodstoWork.py  _tool_WorkHours.py  choropleth_metadata.py  tooltip_figure.py
