[project]
name = "California-Socioeconomic-Profile"
version = "0.1.0"
description = "The California Socioeconomic Profile makes use of the United States Census Bureau's American Community Survey to visualize key social, demographic, and economic information across communities in California."
authors = [
    {name = "Raminder Singh Dubb"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "dash (>=4.2.0,<5.0.0)",
    "dash-bootstrap-components (>=2.0.4,<3.0.0)",
    "feffery-markdown-components (>=0.4.3,<0.5.0)",
    "geopandas (>=1.1.3,<2.0.0)",
    "json5 (>=0.14.0,<0.15.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "gunicorn (>=25.3.0,<26.0.0)",
    "plotly (>=6.7.0,<7.0.0)",
    "dash-extensions (>=2.0.5,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "acspsuedo @ git+https://github.com/ramindersinghdubb/acspsuedo.git",
    "cloud-sql-python-connector (>=1.20.3,<2.0.0)",
    "pg8000 (>=1.31.5,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
