[project]
name = "California-Socioeconomic-Profile"
version = "0.1.1"
description = "The California Socioeconomic Profile makes use of the United States Census Bureau's American Community Survey to visualize key social, demographic, and economic information across communities in California."
authors = [
    {name = "Raminder Singh Dubb"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash (==3.2.0)",
    "dash-bootstrap-components (>=2.0.4,<3.0.0)",
    "dash-extensions (>=2.0.1,<3.0.0)",
    "dash-ag-grid (>=35.2.0,<36.0.0)",
    "plotly (>=6.8.0,<7.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "geopandas (>=1.1.3,<2.0.0)",
    "json5 (>=0.14.0,<0.15.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "pg8000 (>=1.31.5,<2.0.0)",
    "cloud-sql-python-connector (>=1.20.3,<2.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "acspsuedo @ git+https://github.com/ramindersinghdubb/acspsuedo.git",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.3.0,<8.0.0)"
]
